logo is now home link, contact div on each page

--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -27,7 +27,7 @@
     <br>9:00 a.m. Saturday at the city park pavilion.</aside>
 
   <header>
-    <img class="main-logo" src="images/logo.png" alt="WeatherFortune.com Site Logo">
+    <a href="index.html"><img class="main-logo" src="images/logo.png" alt="WeatherFortune.com Site Logo"></a>
     <div class="title-motto">
       <h1>Weather Fortune</h1>
       <div class="motto">~ The Future of Your Weather ~</div>
@@ -99,6 +99,21 @@
 
           <input class="submit" type="submit" value="Report Storm">
       </form>
+
+      <div class="contact-div">
+        <img class="contact-map" src="images/map.jpg" alt="Map of Preston Area">
+        <div class="contact-info">
+          &#9993; weatherfortune@email.com
+          <br>
+          &#9742; 208-WEA-THER
+          <br>
+          &#10140; 186 W 2nd N St, Preston, ID 83263
+          <br>
+          <a href="https://www.facebook.com" target="blank"><img class="social-icon" src="images/facebook.png" alt="Facebook Icon"></a>
+          <a href="https://www.instagram.com" target="blank"><img class="social-icon" src="images/instagram.png" alt="Instagram Icon"></a>
+          <a href="https://www.twitter.com" target="blank"><img class="social-icon" src="images/twitter.png" alt="Twitter Icon"></a>
+        </div>
+      </div>
       
   </main>
 
