--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -26,7 +26,7 @@
     <br>9:00 a.m. Saturday at the city park pavilion.</aside>
 
   <header>
-    <img class="main-logo" src="images/logo.png" alt="WeatherFortune.com Site Logo">
+    <a href="index.html"><img class="main-logo" src="images/logo.png" alt="WeatherFortune.com Site Logo"></a>
     <div class="title-motto">
       <h1>Weather Fortune</h1>
       <div class="motto">~ The Future of Your Weather ~</div>
