added announcments for soda springs and fish haven

--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -22,8 +22,8 @@
 
 <body>
 
-  <aside id="announcment">Saturday = Preston Pancakes in the Park!
-    <br>9:00 a.m. Saturday at the city park pavilion.</aside>
+  <aside id="announcment">Monday = Soda Springs Family Night at Hooper Springs Park!
+    <br>6:00 p.m. Monday at the Hooper Springs Park pavilion.</aside>
 
   <header>
     <a href="index.html"><img class="main-logo" src="images/logo.png" alt="WeatherFortune.com Site Logo"></a>
