--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -22,8 +22,8 @@
 
 <body>
 
-  <aside id="announcment">Saturday = Preston Pancakes in the Park!
-    <br>9:00 a.m. Saturday at the city park pavilion.</aside>
+  <aside id="announcment">Wednesday = Fish Haven Fishing Contest at Bear Lake!
+    <br>7:00 a.m. Wednesday at the Bear Lake marina.</aside>
 
   <header>
     <a href="index.html"><img class="main-logo" src="images/logo.png" alt="WeatherFortune.com Site Logo"></a>
