--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -46,39 +46,39 @@
       <h2>Weather Fortune Gallery</h2>
       <div class=gallery-grid>
         <figure>
-            <img data-src="images/fall-colors.jpg" src="images/placeholder.jpg" alt="Autumn Tree Colors">
+            <img data-src="images/fall-colors.jpg" src="http://via.placeholder.com/320x320" alt="Autumn Tree Colors">
             <figcaption>The First Signs of Autumn</figcaption>
         </figure>
         <figure>
-            <img data-src="images/frosty.jpg" src="images/placeholder.jpg" alt="Early Frost on Garden Leaves">
+            <img data-src="images/frosty.jpg" src="http://via.placeholder.com/320x320" alt="Early Frost on Garden Leaves">
             <figcaption>An Early Frost on the Garden</figcaption>
         </figure>
         <figure>
-            <img data-src="images/partly-cloudy.jpg" src="images/placeholder.jpg" alt="Partly-Cloudy Partly-Sunny Skies">
+            <img data-src="images/partly-cloudy.jpg" src="http://via.placeholder.com/320x320" alt="Partly-Cloudy Partly-Sunny Skies">
             <figcaption>Partly Cloudy or Mostly Sunny?</figcaption>
         </figure>
         <figure>
-            <img data-src="images/puddles.jpg" src="images/placeholder.jpg" alt="Puddles After Rainstorm">
+            <img data-src="images/puddles.jpg" src="http://via.placeholder.com/320x320" alt="Puddles After Rainstorm">
             <figcaption>Puddles After the Rainstorm</figcaption>
         </figure>
         <figure>
-            <img data-src="images/rainbow.jpg" src="images/placeholder.jpg" alt="Rainbow in the Sky">
+            <img data-src="images/rainbow.jpg" src="http://via.placeholder.com/320x320" alt="Rainbow in the Sky">
             <figcaption>Rainbow After a Summer Rain</figcaption>
         </figure>
         <figure>
-            <img data-src="images/spring.jpg" src="images/placeholder.jpg" alt="Spring Flowers">
+            <img data-src="images/spring.jpg" src="http://via.placeholder.com/320x320" alt="Spring Flowers">
             <figcaption>April Showers Bring May Flowers</figcaption>
         </figure>
         <figure>
-            <img data-src="images/stormy-lake.jpg" src="images/placeholder.jpg" alt="Dark Storm Clouds Overlooking Lake">
+            <img data-src="images/stormy-lake.jpg" src="http://via.placeholder.com/320x320" alt="Dark Storm Clouds Overlooking Lake">
             <figcaption>Storm Clouds Over the Bear Lake</figcaption>
         </figure>
         <figure>
-            <img data-src="images/sunrise.jpg" src="images/placeholder.jpg" alt="Midsummer Sunrise">
+            <img data-src="images/sunrise.jpg" src="http://via.placeholder.com/320x320" alt="Midsummer Sunrise">
             <figcaption>Watching the Sunrise</figcaption>
         </figure>
         <figure>
-            <img data-src="images/uphill-snow.jpg" src="images/placeholder.jpg" alt="Walking in the Snow">
+            <img data-src="images/uphill-snow.jpg" src="http://via.placeholder.com/320x320" alt="Walking in the Snow">
             <figcaption>Uphill, Both Ways, In the Snow!</figcaption>
         </figure>
       </div>
