town events initial commit

--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -17,6 +17,7 @@
     <script src="js/webfontload.js" defer></script>
     <script src="js/responsive-menu.js" defer></script>
     <script src="js/weather-api.js" defer></script>
+    <script src="js/towndata.js" defer></script>
     <script src="js/dates.js" defer></script>
 </head>
 
@@ -119,6 +120,8 @@
       </section>
 
     </div>
+
+    <section id="fishhaven-events"></section>
 
     <article class="clearfix">
       <img class="article-img" src="images/costumes1.jpg" alt="Two Boys in Mummy Costumes">
