articles done, css href's updated for combined css

--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -8,9 +8,9 @@
     <title>Preston Idaho Weather | Chris Fowler's Weather Fortune Site | BYU-I</title>
     <meta name="description" content="Preston Idaho Weather Forecast; for Chris Fowler's Weather Fortune site; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/fishhaven-css/small.css">
-    <link rel="stylesheet" href="css/fishhaven-css/medium.css">
-    <link rel="stylesheet" href="css/fishhaven-css/large.css">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Montserrat&family=Montserrat+Alternates:wght@500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer></script>
@@ -121,13 +121,39 @@
 
     </div>
 
-    <section id="fishhaven-events"></section>
+    <section id="fishhaven-events" class="events"></section>    <!-- ID is tied to JavaScript in towndata.js -->
 
     <article class="clearfix">
-      <img class="article-img" src="images/costumes1.jpg" alt="Two Boys in Mummy Costumes">
-      <h3 class="article-title">Halloween Costume Contest</h3>
-      <h4 class="article-title">by Barry A. Live</h4>
-      <p class="article-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut odit nihil doloribus nam quisquam necessitatibus beatae veniam sint, praesentium consequuntur aperiam minima fugit accusantium? Earum nam ab veritatis repellendus a? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa molestiae expedita vitae optio, impedit saepe quasi fugit, doloribus assumenda, natus in rem sit earum tenetur inventore? Inventore repellendus unde id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit explicabo asperiores corporis accusantium tempore obcaecati nihil, voluptatum ipsam sint perspiciatis voluptates tenetur ipsum, nostrum eaque quidem, soluta corrupti totam a! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ea ut, quaerat amet eaque sint eos deserunt distinctio ipsam velit tenetur minima totam numquam error modi enim nisi dolorem dicta.</p>
+      <img class="article-img" src="images/star.jpg" alt="A gold Christmas star">
+      <h3 class="article-title">The Prince of Peace</h3>
+      <h4 class="article-title">by Chris Fowler</h4>
+      <p class="article-text">
+        The following is a snippet of a Christmas message written by Chris Fowler in 2018:
+        <br><br>
+        "...“These things I have spoken unto you, that in me ye might have peace. In the world ye shall have
+        tribulation: but be of good cheer; I have overcome the world.” (John 16:33)
+        <br><br>
+        These words were spoken by Jesus near the end of His life. We shall have tribulation in the world, but
+        be of good cheer, He has overcome the world. Do you remember the words spoken by Jesus while
+        commanding the wind and the waves and the storm to cease? “Peace, be still,” He said, “and the wind
+        ceased, and there was a great calm.” (Mark 4:39)
+        <br><br>
+        There can be peace in the midst of the tribulations of this world.
+        <br><br>
+        And when the tribulation and adversity seems overwhelming, when it gets so burdensome, you may
+        think that even your Eternal Father has forsaken you. When it seems there is no peace on earth, nor
+        peace in your life, if you listen closely, you can hear the Son of God speak, “My son, peace be unto thy
+        soul; thine adversity and thine afflictions shall be but a small moment.” (D&C 121:7)
+        <br><br>
+        With Jesus, you shall have peace. Go unto Him, I say, and you shall have peace. He pleads “Come unto
+        me, all ye that labour and are heavy laden, and I will give you rest. Take my yoke upon you, and learn
+        of me; for I am meek and lowly in heart: and ye shall find rest unto your souls. For my yoke is easy,
+        and my burden is light.” (Matthew 11:28-30)
+        <br><br>
+        If it is peace you seek, then go to Him. He will give you rest, He will give you rest unto your soul.
+        Again, He says “Learn of me, and listen to my words, walk in the meekness of my Spirit, and you shall
+        have peace in me.” (D&C 19:23)..."
+      </p>
     </article>
 
     <div class="contact-div">
