--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -8,9 +8,9 @@
     <title>Preston Idaho Weather | Chris Fowler's Weather Fortune Site | BYU-I</title>
     <meta name="description" content="Preston Idaho Weather Forecast; for Chris Fowler's Weather Fortune site; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/sodasprings-css/small.css">
-    <link rel="stylesheet" href="css/sodasprings-css/medium.css">
-    <link rel="stylesheet" href="css/sodasprings-css/large.css">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Montserrat&family=Montserrat+Alternates:wght@500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer></script>
@@ -121,13 +121,14 @@
 
     </div>
 
-    <section id="sodasprings-events"></section>
+    <section id="sodasprings-events" class="events"></section>    <!-- ID is tied to JavaScript in towndata.js -->
 
     <article class="clearfix">
       <img class="article-img" src="images/station.jpg" alt="Jim Fowler in front of his Beeline Station">
       <h3 class="article-title">Jim Fowler's Beeline Gas Station</h3>
       <h4 class="article-title">by Chris Fowler - 11/26/2020</h4>
-      <p class="article-text">James Fowler was a prominent citizen of Soda Springs, Idaho. Around 1950, him and his brother, Vaughn
+      <p class="article-text">
+        James Fowler was a prominent citizen of Soda Springs, Idaho. Around 1950, him and his brother, Vaughn
         Fowler built a Beeline gas station on the east end of Soda Springs, highway 30. James owned and operated that service station until he sold it around 2008. During that time, it changed from Beeline to Husky to Sinclair. James Fowler was known to most people as Jim, but I knew him as grandpa.
         <br><br>
         Every summer I would spend a week at my grandma and grandpa Fowler's house. On some mornings in the summer, I spent time with Jim at his station. I learned to watch Jeopardy, do crossword puzzles, and I watched him do oil changes in the service bay. I remember how special I felt when he would let me pick a soda out of the cooler, or a candy off the shelf. Sometimes he would even let me reset the pumps. Jim had a daily excercise routine that he completed each morning at his station. All of his grandkids knew that Jim kept a pack of wintergreen gum in the desk drawer, along butterrum candy and cinnamon lifesavers in his pocket.
