--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -8,9 +8,9 @@
     <title>Weather Gallery | Chris Fowler's Weather Fortune Site | BYU-I</title>
     <meta name="description" content="Gallery page for Chris Fowler's Weather Fortune site; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/gallery-css/small.css">
-    <link rel="stylesheet" href="css/gallery-css/medium.css">
-    <link rel="stylesheet" href="css/gallery-css/large.css">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Montserrat&family=Montserrat+Alternates:wght@500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer></script>
