--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -8,9 +8,9 @@
     <title>Weather Fortune Home Page | Chris Fowler's Weather Fortune Site | BYU-I</title>
     <meta name="description" content="Home page for Chris Fowler's Weather Fortune site; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/home-css/small.css">
-    <link rel="stylesheet" href="css/home-css/medium.css">
-    <link rel="stylesheet" href="css/home-css/large.css">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Montserrat&family=Montserrat+Alternates:wght@500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer></script>
@@ -46,7 +46,7 @@
 
     <h2>Weather Fortune Home Page</h2>
 
-    <div class="hero-div">
+    <div class="hero-div"> <!-- FIX THIS SO IT WON'T BE POSITION ABSOLUTE LIKE ON TOWN PAGES-->
       <picture>
         <source media="(max-width: 500px)" srcset="images/home-img500.jpg">
         <source media="(max-width: 800px)" srcset="images/home-img800.jpg">
@@ -57,10 +57,32 @@
     <div class="town-info"></div>
 
     <article class="clearfix">
-      <img class="article-img" src="images/glasses.jpg" alt="Clear Image of Looking Through Eyeglasses">
-      <h3 class="article-title">Snapshots of the Near-Future</h3>
-      <h4 class="article-title">by W. Ether Mann</h4>
-      <p class="article-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut odit nihil doloribus nam quisquam necessitatibus beatae veniam sint, praesentium consequuntur aperiam minima fugit accusantium? Earum nam ab veritatis repellendus a? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa molestiae expedita vitae optio, impedit saepe quasi fugit, doloribus assumenda, natus in rem sit earum tenetur inventore? Inventore repellendus unde id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit explicabo asperiores corporis accusantium tempore obcaecati nihil, voluptatum ipsam sint perspiciatis voluptates tenetur ipsum, nostrum eaque quidem, soluta corrupti totam a! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ea ut, quaerat amet eaque sint eos deserunt distinctio ipsam velit tenetur minima totam numquam error modi enim nisi dolorem dicta.</p>
+      <img class="article-img" src="images/peace.jpg" alt="A child's hand reaching to catch a feather">
+      <h3 class="article-title">A Message of Peace</h3>
+      <h4 class="article-title">by Chris Fowler</h4>
+      <p class="article-text">
+        The following is a snippet of a Christmas message written by Chris Fowler in 2018:
+        <br><br>
+        "...in these latter days, when the world is in commotion, when there are wars among nations, upheaval
+        across the land, contention within families, feelings of hopelessness and loneliness among many, I pray
+        that you, and I, and all mankind will seek Him, even He who is the Prince of Peace. “For unto us a
+        child is born, unto us a son is given: and the government shall be upon his shoulder: and his name shall
+        be called Wonderful, Counsellor, The mighty God, The everlasting Father, the Prince of Peace.” (Isaiah
+        9:6)
+        <br><br>
+        I pray that peace will be published in all the world, that wars will cease now as they have before, that
+        nations will prosper in peace, that families will be made whole, that hearts will be healed. I pray that
+        relationships will be mended, that the peace of forgiveness will be a gift that is freely given by all and
+        to all. I pray that the peace of His Holy Spirit will enter into all hearts, into your heart and into my
+        heart, giving peace unto our souls. I pray that those who seek peace shall find it.
+        For God has said “Peace, peace be unto you, because of your faith in my Well Beloved, who was from
+        the foundation of the world.” (Helaman 5:47)
+        <br><br>
+        After Alma prophesied that Christ shall be born of Mary, he said “And now, may the peace of God rest
+        upon you, and upon your houses and lands, and upon your flocks and herds, and all that you possess,
+        your women and your children, according to your faith and good works, from this time forth and
+        forever.” (Alma 7:27)..."
+      </p>
     </article>
 
     <div class="contact-div">
