--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -8,9 +8,9 @@
     <title>Preston Idaho Weather | Chris Fowler's Weather Fortune Site | BYU-I</title>
     <meta name="description" content="Preston Idaho Weather Forecast; for Chris Fowler's Weather Fortune site; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/preston-css/small.css">
-    <link rel="stylesheet" href="css/preston-css/medium.css">
-    <link rel="stylesheet" href="css/preston-css/large.css">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Montserrat&family=Montserrat+Alternates:wght@500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" defer></script>
@@ -121,13 +121,39 @@
 
     </div>
 
-    <section id="preston-events"></section>
+    <section id="preston-events" class="events"></section>    <!-- ID is tied to JavaScript in towndata.js -->
 
     <article class="clearfix">
-      <img class="article-img" src="images/costumes1.jpg" alt="Two Boys in Mummy Costumes">
-      <h3 class="article-title">Halloween Costume Contest</h3>
-      <h4 class="article-title">by Barry A. Live</h4>
-      <p class="article-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut odit nihil doloribus nam quisquam necessitatibus beatae veniam sint, praesentium consequuntur aperiam minima fugit accusantium? Earum nam ab veritatis repellendus a? Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa molestiae expedita vitae optio, impedit saepe quasi fugit, doloribus assumenda, natus in rem sit earum tenetur inventore? Inventore repellendus unde id. Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit explicabo asperiores corporis accusantium tempore obcaecati nihil, voluptatum ipsam sint perspiciatis voluptates tenetur ipsum, nostrum eaque quidem, soluta corrupti totam a! Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ea ut, quaerat amet eaque sint eos deserunt distinctio ipsam velit tenetur minima totam numquam error modi enim nisi dolorem dicta.</p>
+      <img class="article-img" src="images/noel.jpg" alt="The word NOEL lit up by white lights">
+      <h3 class="article-title">A Message of Hope</h3>
+      <h4 class="article-title">by Chris Fowler</h4>
+      <p class="article-text">
+        The following is a snippet of a Christmas message written by Chris Fowler in 2019:
+        <br><br>
+        "...With so many things that can cause us to despair and feel hopeless, is it hard to imagine that the Hope
+        of Israel, the Hope of all mankind, came as a “babe wrapped in swaddling clothes, lying in a manger”?
+        (Luke 2:12)
+        <br><br>
+        The Hope that there is a way back to God’s holy presence after committing sin and error. Even after
+        continuing to struggle with the same sin or error time and time again. The Hope that there is
+        redemption for a “soul so rebellious and proud as mine”. Don’t lose hope. Remember the newborn babe
+        who has “graven thee upon the palms of [his] hands”, and became your advocate with the Father.
+        (Hymn 193 I Stand All Amazed, Isaiah 49:16, 1 John 2:1)
+        <br><br>
+        The Hope that there is an end and a purpose to your suffering and your trials. When you wonder how it
+        can get worse and why you deserve to go through such an affliction. When you wonder if there is an end
+        to what may seem like a never-ending dark and lonely tunnel. There is light at the end! There is hope!
+        Remember the newborn babe, even Jesus Christ, who went “forth, suffering pains and afflictions and
+        temptations of every kind; and this that the word might be fulfilled which saith he will take upon him
+        [your pains and sicknesses]… and he will take upon him [your] infirmities, that his bowels may be filled
+        with mercy, according to the flesh, that he may know according to the flesh how to succor [you]
+        according to [your] infirmities”. (Alma 7:11-12)
+        <br><br>
+        As you reflect now on this wonderous event, remember what the angels declared then, and what the
+        Holy Ghost declares now. Unto YOU is born a Savior, which is Christ the Lord. He was born for you. He
+        lived for you. He died for you. He suffered and atoned for you. He was resurrected for you. He lives now
+        for you, that you might have hope. Go as the shepherds, with haste, to find Him. (Luke 2:7-20)..."
+      </p>
     </article>
 
     <div class="contact-div">
