--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a href="lesson9/index.html">Weather Fortune Home</a> | 
         <a href="lesson9/home-wireframes.html">Home Wireframes</a></li>
       <li>Lesson 10: <a href="lesson10/preston-10.html">Preston 10</a></li>
-      <li>Lesson 11: <a href="lesson11/index.html">Weather Fortune</a></li>
+      <li>Lesson 11: <a href="lesson11/index.html">Weather Fortune FINAL</a></li>
       
     </ul>
   </nav>
