article title and author css improved

--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -125,8 +125,8 @@
 
     <article class="clearfix">
       <img class="article-img" src="images/star.jpg" alt="A gold Christmas star">
-      <h3 class="article-title">The Prince of Peace</h3>
-      <h4 class="article-title">by Chris Fowler</h4>
+      <h3 class="article-title">Another Message of Peace</h3>
+      <h4 class="article-author">by Chris Fowler</h4>
       <p class="article-text">
         The following is a snippet of a Christmas message written by Chris Fowler in 2018:
         <br><br>
