--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -59,7 +59,7 @@
     <article class="clearfix">
       <img class="article-img" src="images/peace.jpg" alt="A child's hand reaching to catch a feather">
       <h3 class="article-title">A Message of Peace</h3>
-      <h4 class="article-title">by Chris Fowler</h4>
+      <h4 class="article-author">by Chris Fowler</h4>
       <p class="article-text">
         The following is a snippet of a Christmas message written by Chris Fowler in 2018:
         <br><br>
