--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -126,7 +126,7 @@
     <article class="clearfix">
       <img class="article-img" src="images/noel.jpg" alt="The word NOEL lit up by white lights">
       <h3 class="article-title">A Message of Hope</h3>
-      <h4 class="article-title">by Chris Fowler</h4>
+      <h4 class="article-author">by Chris Fowler</h4>
       <p class="article-text">
         The following is a snippet of a Christmas message written by Chris Fowler in 2019:
         <br><br>
