--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -125,8 +125,8 @@
 
     <article class="clearfix">
       <img class="article-img" src="images/station.jpg" alt="Jim Fowler in front of his Beeline Station">
-      <h3 class="article-title">Jim Fowler's Beeline Gas Station</h3>
-      <h4 class="article-title">by Chris Fowler - 11/26/2020</h4>
+      <h3 class="article-title">The Station</h3>
+      <h4 class="article-author">by Chris Fowler - 11/26/2020</h4>
       <p class="article-text">
         James Fowler was a prominent citizen of Soda Springs, Idaho. Around 1950, him and his brother, Vaughn
         Fowler built a Beeline gas station on the east end of Soda Springs, highway 30. James owned and operated that service station until he sold it around 2008. During that time, it changed from Beeline to Husky to Sinclair. James Fowler was known to most people as Jim, but I knew him as grandpa.
