form style changes, weather summary padding ++

--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -87,9 +87,9 @@
           <fieldset>
               <legend>Additional Info</legend>
               <div>User In Danger?
-                <label class="sbs"><input type="radio" name="danger"> Yes</label>
-                <label class="sbs"><input type="radio" name="danger"> No</label>
-                <label class="sbs"><input type="radio" name="danger"> Maybe</label>
+                <label class="sbs danger"><input type="radio" name="danger"> Yes</label>
+                <label class="sbs danger"><input type="radio" name="danger"> No</label>
+                <label class="sbs danger"><input type="radio" name="danger"> Maybe</label>
               </div>
               <label class="top">Additional Information or Comments <textarea class="comments"></textarea></label>
           </fieldset>
