altered Soda Springs announcement

--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -23,8 +23,8 @@
 
 <body>
 
-  <aside id="announcment">Monday = Soda Springs Family Night at Hooper Springs Park!
-    <br>6:00 p.m. Monday at the Hooper Springs Park pavilion.</aside>
+  <aside id="announcment">Monday = Soda Springs Family Frenzy!
+    <br>6:00 p.m. Monday at the Hooper Springs Park.</aside>
 
   <header>
     <a href="index.html"><img class="main-logo" src="images/logo.png" alt="WeatherFortune.com Site Logo"></a>
