contact map now a link

--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -86,7 +86,9 @@
     </article>
 
     <div class="contact-div">
-      <img class="contact-map" src="images/map.jpg" alt="Map of Our Location">
+      <a href="https://www.google.com/maps/place/186+W+2nd+N+St,+Preston,+ID+83263" target="blank">
+        <img class="contact-map" src="images/map.jpg" alt="Map of Our Location">
+      </a>
       <div class="contact-info">
         &#9993; weatherfortune@email.com
         <br>
