--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -43,60 +43,63 @@
   </nav>  
 
   <main>
-      <h2>Weather Fortune Gallery</h2>
-      <div class=gallery-grid>
-        <figure>
-            <img data-src="images/fall-colors.jpg" src="https://via.placeholder.com/320x320" alt="Autumn Tree Colors">
-            <figcaption>The First Signs of Autumn</figcaption>
-        </figure>
-        <figure>
-            <img data-src="images/frosty.jpg" src="https://via.placeholder.com/320x320" alt="Early Frost on Garden Leaves">
-            <figcaption>An Early Frost on the Garden</figcaption>
-        </figure>
-        <figure>
-            <img data-src="images/partly-cloudy.jpg" src="https://via.placeholder.com/320x320" alt="Partly-Cloudy Partly-Sunny Skies">
-            <figcaption>Partly Cloudy or Mostly Sunny?</figcaption>
-        </figure>
-        <figure>
-            <img data-src="images/puddles.jpg" src="https://via.placeholder.com/320x320" alt="Puddles After Rainstorm">
-            <figcaption>Puddles After the Rainstorm</figcaption>
-        </figure>
-        <figure>
-            <img data-src="images/rainbow.jpg" src="https://via.placeholder.com/320x320" alt="Rainbow in the Sky">
-            <figcaption>Rainbow After a Summer Rain</figcaption>
-        </figure>
-        <figure>
-            <img data-src="images/spring.jpg" src="https://via.placeholder.com/320x320" alt="Spring Flowers">
-            <figcaption>April Showers Bring May Flowers</figcaption>
-        </figure>
-        <figure>
-            <img data-src="images/stormy-lake.jpg" src="https://via.placeholder.com/320x320" alt="Dark Storm Clouds Overlooking Lake">
-            <figcaption>Storm Clouds Over the Bear Lake</figcaption>
-        </figure>
-        <figure>
-            <img data-src="images/sunrise.jpg" src="https://via.placeholder.com/320x320" alt="Midsummer Sunrise">
-            <figcaption>Watching the Sunrise</figcaption>
-        </figure>
-        <figure>
-            <img data-src="images/uphill-snow.jpg" src="https://via.placeholder.com/320x320" alt="Walking in the Snow">
-            <figcaption>Uphill, Both Ways, In the Snow!</figcaption>
-        </figure>
-      </div>
 
-      <div class="contact-div">
-        <img class="contact-map" src="images/map.jpg" alt="Map of Preston Area">
-        <div class="contact-info">
-          &#9993; weatherfortune@email.com
-          <br>
-          &#9742; 208-WEA-THER
-          <br>
-          &#10140; 186 W 2nd N St, Preston, ID 83263
-          <br>
-          <a href="https://www.facebook.com" target="blank"><img class="social-icon" src="images/facebook.png" alt="Facebook Icon"></a>
-          <a href="https://www.instagram.com" target="blank"><img class="social-icon" src="images/instagram.png" alt="Instagram Icon"></a>
-          <a href="https://www.twitter.com" target="blank"><img class="social-icon" src="images/twitter.png" alt="Twitter Icon"></a>
-        </div>
+    <h2>Weather Fortune Gallery</h2>
+    <div class=gallery-grid>
+      <figure>
+          <img data-src="images/fall-colors.jpg" src="https://via.placeholder.com/320x320" alt="Autumn Tree Colors">
+          <figcaption>The First Signs of Autumn</figcaption>
+      </figure>
+      <figure>
+          <img data-src="images/frosty.jpg" src="https://via.placeholder.com/320x320" alt="Early Frost on Garden Leaves">
+          <figcaption>An Early Frost on the Garden</figcaption>
+      </figure>
+      <figure>
+          <img data-src="images/partly-cloudy.jpg" src="https://via.placeholder.com/320x320" alt="Partly-Cloudy Partly-Sunny Skies">
+          <figcaption>Partly Cloudy or Mostly Sunny?</figcaption>
+      </figure>
+      <figure>
+          <img data-src="images/puddles.jpg" src="https://via.placeholder.com/320x320" alt="Puddles After Rainstorm">
+          <figcaption>Puddles After the Rainstorm</figcaption>
+      </figure>
+      <figure>
+          <img data-src="images/rainbow.jpg" src="https://via.placeholder.com/320x320" alt="Rainbow in the Sky">
+          <figcaption>Rainbow After a Summer Rain</figcaption>
+      </figure>
+      <figure>
+          <img data-src="images/spring.jpg" src="https://via.placeholder.com/320x320" alt="Spring Flowers">
+          <figcaption>April Showers Bring May Flowers</figcaption>
+      </figure>
+      <figure>
+          <img data-src="images/stormy-lake.jpg" src="https://via.placeholder.com/320x320" alt="Dark Storm Clouds Overlooking Lake">
+          <figcaption>Storm Clouds Over the Bear Lake</figcaption>
+      </figure>
+      <figure>
+          <img data-src="images/sunrise.jpg" src="https://via.placeholder.com/320x320" alt="Midsummer Sunrise">
+          <figcaption>Watching the Sunrise</figcaption>
+      </figure>
+      <figure>
+          <img data-src="images/uphill-snow.jpg" src="https://via.placeholder.com/320x320" alt="Walking in the Snow">
+          <figcaption>Uphill, Both Ways, In the Snow!</figcaption>
+      </figure>
+    </div>
+
+    <div class="contact-div">
+      <a href="https://www.google.com/maps/place/186+W+2nd+N+St,+Preston,+ID+83263" target="blank">
+        <img class="contact-map" src="images/map.jpg" alt="Map of Our Location">
+      </a>
+      <div class="contact-info">
+        &#9993; weatherfortune@email.com
+        <br>
+        &#9742; 208-WEA-THER
+        <br>
+        &#10140; 186 W 2nd N St, Preston, ID 83263
+        <br>
+        <a href="https://www.facebook.com" target="blank"><img class="social-icon" src="images/facebook.png" alt="Facebook Icon"></a>
+        <a href="https://www.instagram.com" target="blank"><img class="social-icon" src="images/instagram.png" alt="Instagram Icon"></a>
+        <a href="https://www.twitter.com" target="blank"><img class="social-icon" src="images/twitter.png" alt="Twitter Icon"></a>
       </div>
+    </div>
 
   </main>
 
