--- a/lesson11/thanks.html
+++ b/lesson11/thanks.html
@@ -8,9 +8,9 @@
     <title>Storm Center | Chris Fowler's Weather Fortune Site | BYU-I</title>
     <meta name="description" content="Storm Center page for Chris Fowler's Weather Fortune site; for Web Design and Development I (WDD 230). This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/stormcenter-css/small.css">
-    <link rel="stylesheet" href="css/stormcenter-css/medium.css">
-    <link rel="stylesheet" href="css/stormcenter-css/large.css">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Montserrat&family=Montserrat+Alternates:wght@500&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
@@ -42,23 +42,26 @@
   </nav>  
 
   <main>
-      <h2 class="thanks">Thank you for reporting the storm!</h2>
-      <p class="thanks">The future of your weather is in good hands with your report.</p>      
 
-      <div class="contact-div">
-        <img class="contact-map" src="images/map.jpg" alt="Map of Preston Area">
-        <div class="contact-info">
-          &#9993; weatherfortune@email.com
-          <br>
-          &#9742; 208-WEA-THER
-          <br>
-          &#10140; 186 W 2nd N St, Preston, ID 83263
-          <br>
-          <a href="https://www.facebook.com" target="blank"><img class="social-icon" src="images/facebook.png" alt="Facebook Icon"></a>
-          <a href="https://www.instagram.com" target="blank"><img class="social-icon" src="images/instagram.png" alt="Instagram Icon"></a>
-          <a href="https://www.twitter.com" target="blank"><img class="social-icon" src="images/twitter.png" alt="Twitter Icon"></a>
-        </div>
+    <h2 class="thanks">Thank you for reporting the storm!</h2>
+    <p class="thanks">The future of your weather is in good hands with your report.</p>      
+
+    <div class="contact-div">
+      <a href="https://www.google.com/maps/place/186+W+2nd+N+St,+Preston,+ID+83263" target="blank">
+        <img class="contact-map" src="images/map.jpg" alt="Map of Our Location">
+      </a>
+      <div class="contact-info">
+        &#9993; weatherfortune@email.com
+        <br>
+        &#9742; 208-WEA-THER
+        <br>
+        &#10140; 186 W 2nd N St, Preston, ID 83263
+        <br>
+        <a href="https://www.facebook.com" target="blank"><img class="social-icon" src="images/facebook.png" alt="Facebook Icon"></a>
+        <a href="https://www.instagram.com" target="blank"><img class="social-icon" src="images/instagram.png" alt="Instagram Icon"></a>
+        <a href="https://www.twitter.com" target="blank"><img class="social-icon" src="images/twitter.png" alt="Twitter Icon"></a>
       </div>
+    </div>
 
   </main>
 
