--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -158,7 +158,7 @@
 
     <div class="contact-div">
       <a href="https://www.google.com/maps/place/186+W+2nd+N+St,+Preston,+ID+83263" target="blank">
-        <img class="contact-map" src="images/map.jpg" alt="Map of Our Location">
+        <img class="contact-map" src="images/map.jpg" alt="Map showing Weather Fortune's headquarters">
       </a>
       <div class="contact-info">
         &#9993; weatherfortune@email.com
