changed town events section to div

--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -121,7 +121,7 @@
 
     </div>
 
-    <section id="preston-events" class="events"></section>    <!-- ID is tied to JavaScript in towndata.js -->
+    <div id="preston-events" class="events"></div>    <!-- ID is tied to JavaScript in towndata.js -->
 
     <article class="clearfix">
       <img class="article-img" src="images/noel.jpg" alt="The word NOEL lit up by white lights">
