--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -121,7 +121,7 @@
 
     </div>
 
-    <section id="sodasprings-events" class="events"></section>    <!-- ID is tied to JavaScript in towndata.js -->
+    <div id="sodasprings-events" class="events"></div>    <!-- ID is tied to JavaScript in towndata.js -->
 
     <article class="clearfix">
       <img class="article-img" src="images/station.jpg" alt="Jim Fowler in front of his Beeline Station">
