--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -121,7 +121,7 @@
 
     </div>
 
-    <section id="fishhaven-events" class="events"></section>    <!-- ID is tied to JavaScript in towndata.js -->
+    <div id="fishhaven-events" class="events"></div>    <!-- ID is tied to JavaScript in towndata.js -->
 
     <article class="clearfix">
       <img class="article-img" src="images/star.jpg" alt="A gold Christmas star">
