--- a/scoots4fun/index.html
+++ b/scoots4fun/index.html
@@ -94,7 +94,7 @@
       <h2 class="map-title">Map Info</h2>
       <h2 class="contact-title">Contact Info</h2>
       <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d181098.67325928548!2d-86.9969786027839!3d20.44172599195744!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scozumel!5e0!3m2!1sen!2sus!4v1607898264241!5m2!1sen!2sus" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d181098.67325928548!2d-86.9969786027839!3d20.44172599195744!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1scozumel!5e0!3m2!1sen!2sus!4v1607898264241!5m2!1sen!2sus" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </div>
       <div class="contact-info">
         <p>&#x2691; Av. Rafael E. Melgar, Centro,<br>Cozumel, Mexico 77600</p>
