removed width from <textarea> --> html error

--- a/scoots4fun/contact.html
+++ b/scoots4fun/contact.html
@@ -65,7 +65,7 @@
               <!-- Customer Email Address -->
               <label class="top small-input">Email <input type="email" name="email" placeholder="example@email.com" required></label>
               <!-- Comments -->
-              <label class="top">Comments <textarea class="comments" name="extra" width="230px" heigt="330px"></textarea></label>
+              <label class="top">Comments <textarea class="comments" name="extra"></textarea></label>
           </fieldset>
             <!-- Submit Button -->
             <input class="submit" type="submit" value="Send Comments">
