changed figcaption to p.figcaption --> html error

--- a/scoots4fun/contact.html
+++ b/scoots4fun/contact.html
@@ -77,7 +77,7 @@
         <h2 class="contact-title">Contact Info</h2>
         <div class="contact-info portrait-div">
           <img src="images/owner.jpg" alt="Portrait of Joseph Gonzalez, ~Scoots owner">
-          <figcaption>~Scoots Owner - Joseph Gonzalez</figcaption>
+          <p class="figcaption">~Scoots Owner - Joseph Gonzalez</p>
           <p>&#x2691; Av. Rafael E. Melgar, Centro,<br>Cozumel, Mexico 77600</p>
           <p>&#x260e; +52-987-853-0075</p>
           <p>&#x2709; ~scoots@4fun.com</p>
