fixed spelling error

--- a/scoots4fun/tours.html
+++ b/scoots4fun/tours.html
@@ -66,7 +66,7 @@
       <h2 class="history-title">A Short History of Cozumel</h2>
       <div class="history-info clearfix">
         <img src="images/ruins.jpg" alt="Ancient ruins in the jungle">
-        <p>Cozumel is an island off the easter coast of Mexico in the Carribean Sea. Today, Cozumel is a major tourist location, but what was Cozumel like before cruise ships, vacationing tourists, and sunbathers?</p>
+        <p>Cozumel is an island off the eastern coast of Mexico in the Carribean Sea. Today, Cozumel is a major tourist location, but what was Cozumel like before cruise ships, vacationing tourists, and sunbathers?</p>
         <p>The following excerpt is from <a href="https://www.britannica.com/place/Cozumel" target="blank">Britannica.com</a>: "Cozumel was a commercial and ceremonial centre during the Mayan period (about 250 to 950 CE), and the island has several small archaeological sites. In 1518 Juan de Grijalva led the first Spanish expedition to Cozumel. In 1519 Hernán Cortés used the island as a base for Spanish efforts to conquer the Maya. During most of the Spanish colonial era, Cozumel was only sparsely populated, but trading ships and pirates occasionally sought shelter and replenished supplies on the island, which was protected behind offshore reefs." Visit <a href="https://www.britannica.com/place/Cozumel" target="blank">Britannica.com</a> for more information.</p>
       </div>
     </section>
