--- a/scoots4fun/attributions.html
+++ b/scoots4fun/attributions.html
@@ -13,36 +13,68 @@
 
 <body>
 
-  <main>
-    color picker: https://coolors.co/ffb938-3481ed-040f16-aa87f5-f5cf87
-    <br><br>
-    weather data: https://openweathermap.org/
-    <br><br>
-    icon: https://www.iconfinder.com/icons/172545/scooter_icon ; edited with pixlr.com font = sweeney
-    <br><br>
-    favicon: same icon then converted using favicon.io
-    <br><br>
-    images:
-    https://unsplash.com/photos/G7hmn5v3zU8 - Caleb George;
-    https://unsplash.com/photos/DXqdEwgJT6Q - NeONBRAND
-    https://unsplash.com/photos/V6_mXhJlm8w - Mitchell Griest
-    https://unsplash.com/photos/M4xmwnWICFE - Bobby Stevenson
-    https://unsplash.com/photos/nhXV1T9LVMg - Caleb George
-    https://powersports.honda.com/street/scooter/metropolitan - Honda Metropolitan
-    https://global.honda/newsroom/news/2004/2040220-dio-eng.html - Honda Dio
-    https://powersports.honda.com/sxs/recutility/pioneer-1000-5 - Honda Pioneer
-    https://unsplash.com/photos/yDekvyZ52dU - NeONBRAND
-    https://unsplash.com/photos/KoZ5haXqUZI - Dan Gomer
-    https://unsplash.com/photos/JlYbZg0LtKs - Donald Giannatti
-    https://unsplash.com/photos/y_E4scvo9lI - Dennis Rochel
-    https://unsplash.com/photos/QEvLb4VEBc0 - Evangelos Mpikakis
-    https://unsplash.com/photos/GRQLq31v6Oo - JC Falcon
-    https://unsplash.com/photos/CtbiN8FsaKg - Apurbo Biswas
-    https://unsplash.com/photos/iFgRcqHznqg - Joseph Gonzalez
-    <br><br>
-    Social Media Icons: <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
-    <br><br>
-    Image Editing: https://pixlr.com/
+  <main id="attributions">
+    <h1>Attributions & Resources</h1>
+    <h2>Images:</h2>
+    <p>
+      <ul>
+        <li><span>Photo by <a href="https://unsplash.com/@seemoris?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Caleb George</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Unsplash</a></span></li>
+        <li><span>Photo by <a href="https://unsplash.com/@neonbrand?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">NeONBRAND</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Unsplash</a></span></li>
+        <li><span>Photo by <a href="https://unsplash.com/@sosoalso?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">yeoul Shin</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Unsplash</a></span></li>
+        <li><span>Photo by <a href="https://unsplash.com/@bobbystevenson?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Bobby Stevenson</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Unsplash</a></span></li>
+        <li><span>Photo by <a href="https://unsplash.com/@seemoris?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Caleb George</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Unsplash</a></span></li>
+        <li><span>Photo by <a href="https://unsplash.com/@neonbrand?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">NeONBRAND</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Unsplash</a></span></li>
+        <li><span>Photo by <a href="https://unsplash.com/@orca23?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Dan Gomer</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Unsplash</a></span></li>
+        <li><span>Photo by <a href="https://unsplash.com/@wizwow?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Donald Giannatti</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Unsplash</a></span></li>
+        <li><span>Photo by <a href="https://unsplash.com/@dennisrochel?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Dennis Rochel</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Unsplash</a></span></li>
+        <li><span>Photo by <a href="https://unsplash.com/@mpikman?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Evangelos Mpikakis</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Unsplash</a></span></li>
+        <li><span>Photo by <a href="https://unsplash.com/@_jcfalcon?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">JC Falcon</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Unsplash</a></span></li>
+        <li><span>Photo by <a href="https://unsplash.com/@apurbopurnota?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Apurbo Biswas</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Unsplash</a></span></li>
+        <li><span>Photo by <a href="https://unsplash.com/@miracletwentyone?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Joseph Gonzalez</a> on <a href="https://unsplash.com/?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText" target="blank">Unsplash</a></span></li>
+        <li><a href="https://powersports.honda.com/street/scooter/metropolitan" target="blank">PowerSports.Honda.com</a></li>
+        <li><a href="https://global.honda/newsroom/news/2004/2040220-dio-eng.html" target="blank">Global.Honda</a></li>
+        <li><a href="https://powersports.honda.com/sxs/recutility/pioneer-1000-5" target="blank">PowerSports.Honda.com</a></li>
+        <li>Social Media Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="blank">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="blank"> www.flaticon.com</a></li>
+      </ul>
+    </p>
+    <h2>Quotes:</h2>
+    <p>
+      <ul>
+        <li>Honda Metropolitan <a href="https://powersports.honda.com/street/scooter/metropolitan" target="blank">PowerSports.Honda.com</a></li>
+        <li>Honda Dio <a href="https://en.wikipedia.org/wiki/Honda_Dio" target="blank">Wikipedia.org</a></li>
+        <li>Honda PCX150 <a href="https://powersports.honda.com/street/scooter/pcx150" target="blank">PowerSports.Honda.com</a></li>
+        <li>Honda Pioneer ATV <a href="https://powersports.honda.com/sxs/recutility/pioneer-1000" target="blank">PowerSports.Honda.com</a></li>
+        <li>Jeep Wrangler 4-door <a href="https://www.jeep.com/wrangler.html" target="blank">Jeep.com</a></li>
+        <li>Jeep Wrangler 2-door <a href="https://www.cars.com/research/jeep-wrangler-2020/" target="blank">Cars.com</a></li>
+        <li>Cozumel History <a href="https://www.britannica.com/place/Cozumel" target="blank">Britannica.com</a></li>
+      </ul>
+    </p>
+    <h2>Outside Links:</h2>
+    <p>
+      <ul>
+        <li><a href="https://thisiscozumel.com/tours/packagedetails/cozumel-wheelchair-accessible-tours" target="blank">Cozumel Wheelchair Accessible Tours</a></li>
+        <li><a href="https://www.tripadvisor.com/AttractionProductReview-g150809-d17400726-The_Original_Jeep_Tour_Revamped_by_Tortugas_CozumelR_Private-Cozumel_Yucatan_Penin.html" target="blank">The Original Jeep Tour Revamped by Tortugas Cozumel® (Private)</a></li>
+        <li><a href="https://www.tripadvisor.com/AttractionProductReview-g150809-d11483752-Mr_Sanchos_Romantic_Day_Beach_Pass_for_Two-Cozumel_Yucatan_Peninsula.html" target="blank">Mr Sanchos Romantic Day Beach Pass for Two</a></li>
+        <li><a href="https://www.tripadvisor.com/AttractionProductReview-g150809-d16654383-ATV_Mud_Kicking_and_Snorkeling_Experience_in_Cozumel_Private-Cozumel_Yucatan_Penin.html" target="blank">ATV Mud Kicking and Snorkeling Experience in Cozumel (Private)</a></li>
+        <li><a href="https://www.tripadvisor.com/AttractionProductReview-g150809-d16822561-Tulum_Mayan_Ruins_Excursion_from_Cozumel-Cozumel_Yucatan_Peninsula.html" target="blank">Tulum Mayan Ruins Excursion from Cozumel</a></li>
+        <li><a href="https://www.tripadvisor.com/AttractionProductReview-g150809-d17797191-Cozumel_Street_Art_Tour-Cozumel_Yucatan_Peninsula.html" target="blank">Cozumel Street Art Tour</a></li>
+        <li><a href="https://www.tripadvisor.com/AttractionProductReview-g150809-d11874831-ATV_Adventure_to_Jade_Cavern-Cozumel_Yucatan_Peninsula.html" target="blank">ATV Adventure to Jade Cavern</a></li>
+        <li><a href="https://www.tripadvisor.com/AttractionProductReview-g150809-d16677338-Cozumel_Snorkeling_Columbia_Palancar_and_Cielo_Beach-Cozumel_Yucatan_Peninsula.html" target="blank">Cozumel Snorkeling: Columbia, Palancar and Cielo Beach</a></li>
+      </ul>
+    </p>
+    <h2>Weather Data:</h2>
+    <p><a href="https://openweathermap.org" target="blank">OpenWeatherMap.org</a></p>
+    <h2>Icon:</h2>
+    <p><a href="https://www.iconfinder.com/icons/1054984/scooter_motorscooter_transportation_vespa_icon" target="blank">IconFinder.com</a></p>
+    <h2>Favicon:</h2>
+    <p>The icon was converted to a favicon using <a href="https://favicon.io" target="blank">favicon.io</a></p>
+    <h2>Embeded Map:</h2>
+    <p><a href="https://www.google.com/maps?ll=20.441726,-86.996979&z=11&t=m&hl=en&gl=US&mapclient=embed&q=cozumel" target="blank">Google.com</a></p>
+    <h2>Color Picker:</h2>
+    <p><a href="https://coolors.co/ffb938-3481ed-040f16-aa87f5-f5cf87" target="blank">Coolors.co</a></p>
+    <h2>Image Editing:</h2>
+    <p><a href="https://pixlr.com/" target="blank">Pixlr.com</a></p>
+    
   </main>
 
 </body>
