--- a/scoots4fun/index.html
+++ b/scoots4fun/index.html
@@ -19,6 +19,7 @@
     <script src="js/dates.js" defer></script>
     <script src="js/menu.js" defer></script>
     <script src="js/weather-api.js" defer></script>
+    <script src="js/lazyload.js" defer></script>
 </head>
 
 <body>  
