updated title, meta, alt's, footer

--- a/scoots4fun/contact.html
+++ b/scoots4fun/contact.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="author" content="Chris Fowler">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>~Scoots | Chris Fowler</title>
-    <meta name="description" content="~Scoots home page for Chris Fowler's WDD230 Final Project; Web Design and Development I. This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
+    <title>~Scoots Contact | Chris Fowler</title>
+    <meta name="description" content="~Scoots Contact page for Chris Fowler's WDD230 Final Project; Web Design and Development I. This is for the Fall 2020 semester at Brigham Young University-Idaho (BYUI).">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
@@ -81,21 +81,20 @@
           <p>&#x2691; Av. Rafael E. Melgar, Centro,<br>Cozumel, Mexico 77600</p>
           <p>&#x260e; +52-987-853-0075</p>
           <p>&#x2709; ~scoots@4fun.com</p>
-          <a href="https://www.instagram.com" target="blank"><img src="images/instagram.png" alt="Instagram Link Logo"></a>
-          <a href="https://www.facebook.com" target="blank"><img src="images/facebook.png" alt="Facebook Link Logo"></a>
-          <a href="https://www.youtube.com" target="blank"><img src="images/youtube.png" alt="YouTube Link Logo"></a>
+          <a href="https://www.instagram.com" target="blank"><img src="images/instagram.png" alt="Instagram Link & Logo"></a>
+          <a href="https://www.facebook.com" target="blank"><img src="images/facebook.png" alt="Facebook Link & Logo"></a>
+          <a href="https://www.youtube.com" target="blank"><img src="images/youtube.png" alt="YouTube Link & Logo"></a>
         </div>
       </section>
     </div>
   </main>
 
   <footer>
-      <span id="copyright"></span>
-      <span>Chris Fowler</span>
-      <span class="separate"> | </span>
-      <span><a href="attributions.html" target="blank">Attributions</a></span>
-      <span class="separate"> | </span>
-      <span id="date-updated"></span>
+    <span id="copyright"></span>
+    <span>Chris Fowler | </span>
+    <span><a href="attributions.html" target="blank">Attributions</a></span>
+    <span class="separate"> | </span>
+    <span id="date-updated"></span>
   </footer>
 
 </body>
