--- a/scoots4fun/index.html
+++ b/scoots4fun/index.html
@@ -57,21 +57,21 @@
           <h2>Scooter</h2>
           <p>3 options to choose from! 1-2 riders, $20-$55</p>
         </div>
-        <img src="images/scooter-sum.jpg" alt="Scooter">
+        <img src="images/scooter-sum.jpg" alt="Yellow Honda Scooter">
       </div>
       <div>
         <div>
           <h2>Jeep</h2>
           <p>Jeep Wrangler, 4-door or 2-door, $60-$125</p>
         </div>
-        <img src="images/jeep-sum.jpg" alt="Jeep">
+        <img src="images/jeep-sum.jpg" alt="Jeep driving on redrock">
       </div>
       <div>
         <div>
           <h2>ATV</h2>
           <p>Pioneer ATV, 4-person, $50-$80</p>
         </div>
-        <img src="images/atv-sum.jpg" alt="ATV">
+        <img src="images/atv-sum.jpg" alt="ATV driving on sandy terrain">
       </div>
     </section>
 
@@ -100,20 +100,19 @@
         <p>&#x2691; Av. Rafael E. Melgar, Centro,<br>Cozumel, Mexico 77600</p>
         <p>&#x260e; +52-987-853-0075</p>
         <p>&#x2709; ~scoots@4fun.com</p>
-        <a href="https://www.instagram.com" target="blank"><img src="images/instagram.png" alt="Instagram Link Logo"></a>
-        <a href="https://www.facebook.com" target="blank"><img src="images/facebook.png" alt="Facebook Link Logo"></a>
-        <a href="https://www.youtube.com" target="blank"><img src="images/youtube.png" alt="YouTube Link Logo"></a>
+        <a href="https://www.instagram.com" target="blank"><img src="images/instagram.png" alt="Instagram Link & Logo"></a>
+        <a href="https://www.facebook.com" target="blank"><img src="images/facebook.png" alt="Facebook Link & Logo"></a>
+        <a href="https://www.youtube.com" target="blank"><img src="images/youtube.png" alt="YouTube Link & Logo"></a>
       </div>
     </section>
   </main>
 
   <footer>
-      <span id="copyright"></span>
-      <span>Chris Fowler</span>
-      <span class="separate"> | </span>
-      <span><a href="attributions.html" target="blank">Attributions</a></span>
-      <span class="separate"> | </span>
-      <span id="date-updated"></span>
+    <span id="copyright"></span>
+    <span>Chris Fowler | </span>
+    <span><a href="attributions.html" target="blank">Attributions</a></span>
+    <span class="separate"> | </span>
+    <span id="date-updated"></span>
   </footer>
 
 </body>
