updated links and .active

--- a/scoots4fun/thanks.html
+++ b/scoots4fun/thanks.html
@@ -32,7 +32,7 @@
     <ul class="menu-show">
       <li><a href="index.html">Home</a> </li>
       <li><a href="rentals.html">Rentals</a></li>
-      <li class="active"><a href="#">Reservations</a></li>
+      <li class="active"><a href="reservations.html">Reservations</a></li>
       <li><a href="tours.html">Tours</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
