--- a/scoots4fun/confirmation.html
+++ b/scoots4fun/confirmation.html
@@ -32,9 +32,9 @@
     <ul class="menu-show">
       <li><a href="index.html">Home</a> </li>
       <li><a href="rentals.html">Rentals</a></li>
-      <li class="active"><a href="#">Reservations</a></li>
+      <li><a href="reservations.html">Reservations</a></li>
       <li><a href="tours.html">Tours</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li class="active"><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
